fixed overflow

--- a/backend/static/full.css
+++ b/backend/static/full.css
@@ -288,7 +288,7 @@ h3 {
 
 #stationContainer {
 	margin-top: 100px;
-	overflow: scroll;
+	overflow-x: hidden;
 	height: 80%;
 }
 
@@ -301,6 +301,7 @@ h3 {
 	display: inline-block;
 	font-size: 30px;
 	width: 200px;
+	overflow: hidden;
 	padding-top: 15px;
 	height: 100px;
 	margin: 20px;
